--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,14 @@
-{}
+{
+  "database": {
+    "rules": "database.rules.json"
+  },
+  "hosting": {
+    "public": "public",
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/dashboard.html"
+      }
+    ]
+  }
+}
